--- a/app/src/main/res/layout/content_user_detail.xml
+++ b/app/src/main/res/layout/content_user_detail.xml
@@ -53,6 +53,17 @@
 
             </LinearLayout>
 
+            <com.github.ybq.android.spinkit.SpinKitView
+                android:id="@+id/progressBar"
+                style="@style/SpinKitView.FadingCircle"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/btn_lmedium_height"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="@dimen/min_padding"
+                android:background="@android:color/transparent"
+                android:padding="@dimen/min_padding"
+                app:SpinKit_Color="@color/colorPrimary" />
+
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -186,6 +197,7 @@
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
+
         </LinearLayout>
 
     </ScrollView>
