--- a/app/src/main/res/layout/activity_setup_category.xml
+++ b/app/src/main/res/layout/activity_setup_category.xml
@@ -30,7 +30,13 @@
 
         >
 
-        <LinearLayout
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="@dimen/xmin_padding"
+            android:layout_marginBottom="@dimen/btn_lmedium_height">
+
+            <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorWhite"
@@ -394,9 +400,44 @@
                         android:layout_alignParentEnd="true" />
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/small_space"
+                    android:background="@color/colorPrimarySoft"
+                    android:padding="@dimen/xmin_padding">
+
+                    <ImageView
+                        android:id="@+id/ico_fashion"
+                        android:layout_width="@dimen/med_padding"
+                        android:layout_height="@dimen/med_padding"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/min_padding"
+                        android:src="@drawable/cloth" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="@dimen/min_padding"
+                        android:layout_toEndOf="@id/ico_fashion"
+                        android:text="Pakaian"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="@dimen/medium_text" />
+
+                    <Switch
+                        android:id="@+id/sw_fashion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true" />
+                </RelativeLayout>
+
+
             </LinearLayout>
 
         </LinearLayout>
+
+        </ScrollView>
 
     </android.support.v7.widget.CardView>
 
