--- a/app/src/main/res/layout/content_form_car_aset.xml
+++ b/app/src/main/res/layout/content_form_car_aset.xml
@@ -481,22 +481,34 @@
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
 
-                        <LinearLayout
+                        <EditText
+                            android:id="@+id/as_seat"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
+                            android:layout_height="wrap_content"
                             android:background="@color/colorNearWhite"
-                            android:padding="@dimen/xmin_padding">
+                            android:ems="10"
+                            android:hint="0"
+                            android:imeOptions="actionNext"
+                            android:inputType="number"
+                            android:padding="@dimen/min_padding"
+                            android:text="" />
 
-                            <Spinner
-                                android:id="@+id/as_seat_car"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:entries="@array/seats_entries"
-                                android:padding="@dimen/xmin_padding"
-                                android:spinnerMode="dialog" />
+                        <!--<LinearLayout-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="match_parent"-->
+                            <!--android:orientation="vertical"-->
+                            <!--android:background="@color/colorNearWhite"-->
+                            <!--android:padding="@dimen/xmin_padding">-->
 
-                        </LinearLayout>
+                            <!--<Spinner-->
+                                <!--android:id="@+id/as_seat_car"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:entries="@array/seats_entries"-->
+                                <!--android:padding="@dimen/xmin_padding"-->
+                                <!--android:spinnerMode="dialog" />-->
+
+                        <!--</LinearLayout>-->
                     </LinearLayout>
 
                     <LinearLayout
@@ -843,7 +855,7 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="@color/colorGrey"
                                 android:layout_marginTop="@dimen/small_space"
-                                android:text="Harga yang ditampilkan (+20%):"
+                                android:text="Harga yang ditampilkan (+10%):"
                                 android:textSize="@dimen/almost_tiny_text" />
 
                             <TextView
@@ -1020,7 +1032,7 @@
                                     android:layout_height="wrap_content"
                                     android:textColor="@color/colorGrey"
                                     android:layout_marginTop="@dimen/small_space"
-                                    android:text="Harga yang ditampilkan (+20%):"
+                                    android:text="Harga yang ditampilkan (+10%):"
                                     android:textSize="@dimen/almost_tiny_text" />
 
                                 <TextView
