--- a/app/src/main/res/layout/content_trans_detail.xml
+++ b/app/src/main/res/layout/content_trans_detail.xml
@@ -114,15 +114,6 @@
                                 android:orientation="vertical"
                                 android:layout_toLeftOf="@+id/btn_camera"
                                 android:padding="@dimen/xmin_padding">
-
-                                <TextView
-                                    android:id="@+id/textView11"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:padding="@dimen/xmin_padding"
-                                    android:text="ID Pelanggan : 123xx01ac" />
-
-
                                 <RelativeLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
@@ -231,18 +222,18 @@
                                 android:padding="@dimen/xmin_padding">
 
                                 <TextView
-                                    android:id="@+id/textView15"
+                                    android:id="@+id/driver"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:padding="@dimen/xmin_padding"
-                                    android:text="Driver : tidak"
+                                    android:text="Driver "
                                     android:layout_centerVertical="true"/>
 
                                 <Button
                                     android:id="@+id/btn_assign_driver"
                                     android:layout_width="wrap_content"
                                     android:layout_height="40dp"
-                                    android:layout_alignEnd="@+id/textView15"
+                                    android:layout_alignEnd="@+id/driver"
                                     android:text="Pilih Driver"
                                     android:textColor="@color/colorWhite"
                                     android:background="@android:color/holo_green_light"
@@ -272,6 +263,7 @@
 
         <LinearLayout
             android:id="@+id/btnContainer"
+            android:orientation="horizontal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
