--- a/app/src/main/res/layout/content_form_driver.xml
+++ b/app/src/main/res/layout/content_form_driver.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/textView12"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Gender"
+                    android:text="Jenis Kelamin"
                     android:textColor="@color/colorBlack" />
 
                 <GridLayout
