--- a/app/src/main/res/layout/content_detail_chat.xml
+++ b/app/src/main/res/layout/content_detail_chat.xml
@@ -5,42 +5,58 @@
     android:background="@android:color/white"
     android:orientation="vertical">
 
-
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
+        android:layout_weight="20"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="bottom">
+        android:layout_marginTop="@dimen/breadcrumb_height"
+        android:id="@+id/scrollView">
 
-        <ListView
-            android:id="@+id/listview"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorGrey"
-            android:cacheColorHint="#00000000"
-            android:divider="#00000000"
-            android:listSelector="#00000000"
-            android:transcriptMode="normal">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/linear_layout_message">
 
-        </ListView>
+        </LinearLayout>
+    </ScrollView>
 
-        <TextView
-            android:id="@android:id/empty"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_alignParentTop="true"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="empty list"
-            android:visibility="gone" />
-    </RelativeLayout>
+    <!--<RelativeLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0dp"-->
+        <!--android:layout_weight="1"-->
+        <!--android:gravity="bottom">-->
+
+        <!--<ListView-->
+            <!--android:id="@+id/listview_message"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@color/colorGrey"-->
+            <!--android:cacheColorHint="#00000000"-->
+            <!--android:divider="#00000000"-->
+            <!--android:listSelector="#00000000"-->
+            <!--android:transcriptMode="normal">-->
+
+        <!--</ListView>-->
+
+        <!--<TextView-->
+            <!--android:id="@android:id/empty"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:layout_alignParentTop="true"-->
+            <!--android:gravity="center_vertical|center_horizontal"-->
+            <!--android:text="empty list"-->
+            <!--android:visibility="gone" />-->
+    <!--</RelativeLayout>-->
 
     <LinearLayout
         android:id="@+id/input_bar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/colorGrey"
+        android:background="@color/colorBackgound"
         android:padding="5dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:focusableInTouchMode="true">
 
         <android.support.v7.widget.CardView
             android:id="@+id/lyt_thread"
@@ -55,7 +71,7 @@
             app:cardUseCompatPadding="true">
 
             <EditText
-                android:id="@+id/text_content"
+                android:id="@+id/messageArea"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@android:color/white"
@@ -66,21 +82,11 @@
         </android.support.v7.widget.CardView>
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/sendButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:backgroundTint="@color/colorPrimaryDark"
-            android:src="@drawable/ic_send_black_24dp"/>
-
-        <!--<Button-->
-        <!--android:id="@+id/btn_send"-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="50dp"-->
-        <!--android:layout_alignParentRight="true"-->
-        <!--android:layout_marginTop="5dp"-->
-        <!--android:layout_marginLeft="5dp"-->
-        <!--android:layout_marginRight="5dp"-->
-        <!--android:background="@drawable/button_send"-->
-        <!--android:contentDescription="Send" />-->
+            app:srcCompat="@drawable/ic_send_black_24dp" />
 
     </LinearLayout>
 </LinearLayout>
