--- a/app/src/main/res/layout/message_list_view.xml
+++ b/app/src/main/res/layout/message_list_view.xml
@@ -1,110 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/min_padding"
+    android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view_msgList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/card_view_msgList"
-        app:cardElevation="1dp"
-        android:padding="@dimen/xmin_padding"
+        android:clickable="true"
         android:foreground="?selectableItemBackground"
-        android:clickable="true">
+        android:padding="@dimen/xmin_padding"
+        app:cardElevation="1dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:padding="@dimen/min_padding">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="@dimen/xmin_padding"
-                android:layout_marginTop="@dimen/xmin_padding"
-                >
+            <ImageView
+                android:id="@+id/msg_thumb"
+                android:layout_width="@dimen/msg_thumb_width"
+                android:layout_height="@dimen/msg_thumb_height"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="@dimen/activity_horizontal_margin"
+                android:background="@drawable/img" />
 
-                <ImageView
-                    android:id="@+id/msg_thumb"
-                    android:layout_width="@dimen/msg_thumb_width"
-                    android:layout_height="@dimen/msg_thumb_height"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-                <TextView
-                    android:id="@+id/msg_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/msg_thumb"
-                    android:text="Nama Aset"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/medium_text"
-                    android:textStyle="bold" />
-
-                <ImageView
-                    android:id="@+id/msg_name_ico"
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_below="@id/msg_title"
-                    android:layout_toRightOf="@id/msg_thumb"
-                    android:layout_marginTop="@dimen/xmin_padding"
-                    android:layout_marginRight="@dimen/xmin_padding"
-                    app:srcCompat="@drawable/ic_person_black_18dp"
-                    />
+            <TextView
+                android:id="@+id/msg_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/min_padding"
+                android:layout_toRightOf="@id/msg_thumb"
+                android:text="-"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/medium_text"
+                android:textStyle="bold" />
 
 
-                <TextView
-                    android:id="@+id/msg_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/msg_title"
-                    android:layout_toRightOf="@id/msg_name_ico"
-                    android:text="Nama Member"
-                    android:layout_alignBottom="@id/msg_name_ico"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="@dimen/small_text" />
+            <TextView
+                android:id="@+id/msg_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/msg_title"
+                android:layout_toRightOf="@id/msg_thumb"
+                android:text="-"
+                android:textColor="@color/colorBlack"
+                android:textSize="@dimen/small_text" />
 
-                <TextView
-                    android:id="@+id/msg_hal"
-                    android:layout_width="230dp"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/msg_name_ico"
-                    android:layout_toRightOf="@id/msg_thumb"
-                    android:layout_marginTop="@dimen/min_padding"
-                    android:text="Message Terakhir"
-                    android:textColor="@color/colorGrey"
-                    android:textSize="@dimen/medium_text" />
-
-                <TextView
-                    android:id="@+id/msg_last_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/msg_name_ico"
-                    android:layout_toRightOf="@id/msg_hal"
-                    android:layout_marginTop="@dimen/min_padding"
-                    android:text="time"
-                    android:textColor="@color/colorGrey"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignBottom="@id/msg_hal"
-                    android:gravity="end|bottom"
-                    android:textSize="12dp" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/xmin_padding"
-                android:layout_height="1dp"
-                android:layout_marginLeft="@dimen/min_padding"
-                android:layout_marginRight="@dimen/min_padding"
-                android:background="@android:color/darker_gray"/>
-
-
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
